Update title and h1

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-    <head>Noah Watson - SaaS Professional</head>
+    <head>Noah Watson - Official Website</head>
     <body>
-        <h1>Noah Watson - SaaS Professional</h1>
+        <h1>Noah Watson - Official Website</h1>
         <p>Under Construction</p>
     </body>
 </html>
