--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <head>Noah Watson - Official Website</head>
     <body>
         <h1>Noah Watson - Official Website</h1>
-        <p>Under Construction</p>
+        <p>Coming Soon</p>
     </body>
 </html>
