--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-    <head>Noah Watson - Official Website</head>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Noah Watson - Official Website</title>
+    </head>
     <body>
         <h1>Noah Watson - Official Website</h1>
         <p>Coming Soon</p>
