--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Noah Watson - Official Website</title>
+        <link href="/body.css" rel="stylesheet" />
     </head>
     <body>
         <h1>Noah Watson - Official Website</h1>
