--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="/body.css" rel="stylesheet" />
     </head>
     <body>
-        <h1>Noah Watson - Official Website</h1>
+        <h1>Noah Watson - Dev Portfolio</h1>
         <p>Coming Soon</p>
     </body>
 </html>
