--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Noah Watson - Official Website</title>
+        <title>Noah Watson - Dev Portfolio</title>
         <link href="/body.css" rel="stylesheet" />
     </head>
     <body>
